apps/knative/knativeeventing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
