apps/knative/knativeserving.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
