apps/knative/helloworld.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"  # Optional: ensures at least one instance is running
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go:latest # The container image
          env:
            - name: TARGET
              value: "Knative, Contour"
