apps/knative/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookstore-virtualservice
  namespace: default
spec:
  hosts:
    - bookstore.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: bookstore-frontend-svc.default.svc.cluster.local
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nodeserver
  namespace: default
spec:
  hosts:
    - nodeserver.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: node-server-svc.default.svc.cluster.local
            port:
              number: 80
